# computer-use-vm

./: .gitignore  .npmignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  requirements-vnc.txt
codex_vm_bridge/: backends.py  cli.py  mcp_server.py
computer_use_vm/: agent_client.py  backends.py  cli.py  mcp_server.py
computer_use_vm/assets/guest/: computer_use_vm_guest_agent.py
examples/: mcp.json  workflow.sh
guest/: CodexVMGuestHelper.swift  ComputerUseVMGuestHelper.swift  codex_vm_guest_agent.py  computer_use_vm_guest_agent.py
references/: architecture.md
scripts/: install-skill.mjs  setup-dev.sh  verify.sh
skills/codex-vm-computer/: SKILL.md
skills/codex-vm-computer/agents/: openai.yaml
skills/codex-vm-computer/references/: bridge.md
skills/codex-vm-computer/scripts/: codex-vm-bridge
skills/computer-use-vm/: SKILL.md
skills/computer-use-vm/agents/: openai.yaml
skills/computer-use-vm/references/: bridge.md
skills/computer-use-vm/scripts/: computer-use-vm
