[project]
name = "codex-vm-bridge"
version = "0.1.0"
description = "Local VM lifecycle and guest computer-use bridge for Codex"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = "MIT"
authors = [
  { name = "Codex VM Bridge contributors" }
]
keywords = ["codex", "computer-use", "macos", "virtual-machine", "tart", "utm", "accessibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Swift",
  "Topic :: Software Development :: Testing",
]

[project.scripts]
codex-vm-bridge = "codex_vm_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/ZimengXiong/codex-vm-bridge"
Issues = "https://github.com/ZimengXiong/codex-vm-bridge/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["codex_vm_bridge*"]

[tool.setuptools.package-data]
codex_vm_bridge = ["assets/guest/*"]
