[project]
name = "computer-use-vm"
version = "0.1.4"
description = "Let agents run disposable VMs"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = "MIT"
authors = [
  { name = "Computer Use VM contributors" }
]
keywords = ["computer-use", "macos", "virtual-machine", "tart", "utm", "accessibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Swift",
  "Topic :: Software Development :: Testing",
]

[project.scripts]
computer-use-vm = "computer_use_vm.cli:main"

[project.urls]
Homepage = "https://github.com/ZimengXiong/computer-use-vm"
Issues = "https://github.com/ZimengXiong/computer-use-vm/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["computer_use_vm*"]

[tool.setuptools.package-data]
computer_use_vm = ["assets/guest/*"]
